<resources>
    <string name="app_name">CampingSpot</string>
    <string name="login">login</string>
    <string name="register">register</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="search">search</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="checkin">check-in</string>
    <string name="checkout">check-out</string>
    <string name="results">results</string>
    <string name="submit">submit</string>
    <string name="logout">logout</string>
    <string name="email">email</string>
    <string name="historic">historic</string>
    <string name="book">book</string>
    <string name="save">save</string>
    <string name="name">name</string>

</resources>