<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E6C3B0"
            android:backgroundTint="#D8D8D8">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                android:id="@+id/imageView"
                android:layout_width="278dp"
                android:layout_height="256dp"
                android:layout_gravity="center"
                android:foregroundGravity="center"
                app:srcCompat="@drawable/logo" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1" />


                <EditText
                    android:id="@+id/register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:background="#FFFFFF"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:padding="7dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:background="#FFFFFF"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:padding="7dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:background="#FDF6F6"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="7dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/register_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:background="#FDF6F6"
                    android:backgroundTint="#FFFFFF"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:padding="7dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/register_back"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#5E5B5B"
                        android:onClick="clickToBack"
                        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <Button
                        android:id="@+id/login_main"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:backgroundTint="#171515"
                        android:onClick="clickToRegister"
                        android:text="@string/register"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>